--- a/_posts/2019-08-25-21주일.md
+++ b/_posts/2019-08-25-21주일.md
@@ -7,6 +7,6 @@ categories: jekyll update
 
 {% for file in site.static_files %}
   {% if file.path contains "21st" %}
-  <object data="{{file.path}}" width="1000" height="1000" type='application/pdf'/>
+  <object data="{{file.path}}" width="100%" height="1000" type='application/pdf'/>
   {% endif %}
 {% endfor %}
