--- a/_posts/2019-08-25-21주일.md
+++ b/_posts/2019-08-25-21주일.md
@@ -5,8 +5,4 @@ date:   2019-08-25 09:24:02 -0400
 categories: jekyll update
 ---
 
-{% for file in site.static_files %}
-  {% if file.path contains "21st" %}
-  <object data="assets/sunday_bulletin/20190825_21st.pdf width="100%" height="800em" type='application/pdf'><object/>
-  {% endif %}
-{% endfor %}
+<object data="/assets/sunday_bulletin/20190825_21st.pdf" width="100%" height="800em" type='application/pdf'><object/>
