--- a/_posts/2019-08-25-21주일.md
+++ b/_posts/2019-08-25-21주일.md
@@ -4,4 +4,4 @@ title:  "연중 제21주일(2019년 8월 25일)"
 date:   2019-08-25 09:24:02 -0400
 categories: jekyll update
 ---
-[<object data="/assets/sunday_bulletin/20190825_21st.pdf" width="100%" height="1000%" type='application/pdf' />](/assets/sunday_bulletin/20190825_21st.pdf)
+[<object data="/assets/sunday_bulletin/20190825_21st.pdf" width="100%" height="1000" type='application/pdf' />](/assets/sunday_bulletin/20190825_21st.pdf)
